# rddesign

./: .gitignore  README.md  pyproject.toml
docs/: Makefile  RDD.rst  bootstrap.rst  conf.py  continuity_test.rst  fit.rst  index.rst  refs.bib  requirements.txt
src/rddesign/: __init__.py  helpers.py  main.py  test_main.py
tests/: test_pddesign.py
