[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rddesign"
version = "0.0.0" 
authors = [
    {name = "Moses Stewart", email = "mosesstewart02@gmail.com"},
    {name = "Rahul Singh", email = "rahul_singh@fas.harvard.edu"}
]

description = "A package for implementing regression discontinuity design models"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["rdd", "regression discontinuity", "pdd", "proxy discontinuity"]
dependencies = [
  "matplotlib",
  "scipy",
  "numpy",
  "pandas"
]

[project.optional-dependencies] 
test = ["pytest"]

[project.urls]  # Optional
"Homepage" = "https://github.com/MosesStewart/pddesign"

[tool.pytest.ini_options]
pythonpath = ["src", "src/rddesign"]
testpaths = "tests"
